# dsi-2025-fall-team-35-trucking-market-research

./: .gitattributes  .gitignore  .tool-versions  FARS CRSS Combiner.ipynb  Insurance Data Cleaning.ipynb  README.md  app.py  crss_fault_cleaned.ipynb  master_data_merge.ipynb  project_book.ipynb  pyproject.toml  requirements.txt  run.sh
dashboard/: __init__.py  app.py  config.py  init_data.py  preprocess.py  utils.py
data/: 100-sample-dots.csv  100-sample.csv  1000-sampled-data.csv  500-sampled-data.csv  cargo_with_categories.parquet  dot_cargo_carried.parquet  enriched_100_safer_snapshot.csv  naics-2022.csv
evaluation/: comparison_output.csv  ground_truth_1000_with_binary.csv  ground_truth_494.csv  ground_truth_503.csv  sample_for_annotation_100_enriched.csv
llm-prompts/: baseline_v1.py
notebooks/: LR_1000_with_cargo_train.ipynb  TAM_model.ipynb  dqs_notebook.ipynb  historical-analysis.ipynb  industry-sectorization.ipynb  join_with_data_axle.ipynb  october-census-analysis.ipynb
quality-scores/: dqs_history.csv  gemini-2.5-flash-500sample.csv  gemini-2.5-pro-500sample.csv  gemini-validity-sample-results.csv  llm_validity_20251013_115227.csv  pilot-gemini-validity-sample-records-n10-s27.csv  pilot-gemini-validity-sample-records-n10-s99.csv  pilot-gemini-validity-sample-results-n10-s99.csv  validity_sample_results.csv
scripts/: calculate_dqm.py  compare_llm_to_ground_truth.py  convert_raw_geocode_to_parquet.py  email_domain_validator.py  fetch_cargo_carried.py  gemini-llm-validity-review.py  gemini_llm_company_fit.py  llm_validity_review.py  preprocess.py  (+5 more)
(+77 files in other folders)
