[tool.poetry]
name = "trucking-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "trucking_data"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.4.7"
polars = "^1.33.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
