[tool.poetry]
name = "trucking-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "trucking_data"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.4.7"
polars = "^1.33.1"
requests = "^2.32.5"
tqdm = "^4.67.1"
rapidfuzz = "^3.14.1"
numpy = "^2.3.3"
geopandas = "^1.1.1"
cartopy = "^0.25.0"
matplotlib = "^3.10.6"
pyarrow = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
